--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
 asgiref==3.8.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.2
 Django==5.1.7
+django-allauth==65.7.0
+django-debug-toolbar==5.1.0
+idna==3.10
+oauthlib==3.2.2
+pycparser==2.22
+PyJWT==2.10.1
+requests==2.32.3
+requests-oauthlib==2.0.0
 sqlparse==0.5.3
+urllib3==2.3.0
