tailwind css integration done

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,185 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+/node_modules/.bin/detect-libc
+/node_modules/.bin/jiti
+/node_modules/.bin/tailwindcss
+/node_modules/@parcel/watcher/scripts/build-from-source.js
+/node_modules/@parcel/watcher/src/kqueue/KqueueBackend.cc
+/node_modules/@parcel/watcher/src/kqueue/KqueueBackend.hh
+/node_modules/@parcel/watcher/src/linux/InotifyBackend.cc
+/node_modules/@parcel/watcher/src/linux/InotifyBackend.hh
+/node_modules/@parcel/watcher/src/macos/FSEventsBackend.cc
+/node_modules/@parcel/watcher/src/macos/FSEventsBackend.hh
+/node_modules/@parcel/watcher/src/shared/BruteForceBackend.cc
+/node_modules/@parcel/watcher/src/shared/BruteForceBackend.hh
+/node_modules/@parcel/watcher/src/unix/fts.cc
+/node_modules/@parcel/watcher/src/unix/legacy.cc
+/node_modules/@parcel/watcher/src/wasm/include.h
+/node_modules/@parcel/watcher/src/wasm/WasmBackend.cc
+/node_modules/@parcel/watcher/src/wasm/WasmBackend.hh
+/node_modules/@parcel/watcher/src/watchman/BSER.cc
+/node_modules/@parcel/watcher/src/watchman/BSER.hh
+/node_modules/@parcel/watcher/src/watchman/IPC.hh
+/node_modules/@parcel/watcher/src/watchman/WatchmanBackend.cc
+/node_modules/@parcel/watcher/src/watchman/WatchmanBackend.hh
+/node_modules/@parcel/watcher/src/windows/win_utils.cc
+/node_modules/@parcel/watcher/src/windows/win_utils.hh
+/node_modules/@parcel/watcher/src/windows/WindowsBackend.cc
+/node_modules/@parcel/watcher/src/windows/WindowsBackend.hh
+/node_modules/@parcel/watcher/src/Backend.cc
+/node_modules/@parcel/watcher/src/Backend.hh
+/node_modules/@parcel/watcher/src/binding.cc
+/node_modules/@parcel/watcher/src/Debounce.cc
+/node_modules/@parcel/watcher/src/Debounce.hh
+/node_modules/@parcel/watcher/src/DirTree.cc
+/node_modules/@parcel/watcher/src/DirTree.hh
+/node_modules/@parcel/watcher/src/Event.hh
+/node_modules/@parcel/watcher/src/Glob.cc
+/node_modules/@parcel/watcher/src/Glob.hh
+/node_modules/@parcel/watcher/src/PromiseRunner.hh
+/node_modules/@parcel/watcher/src/Signal.hh
+/node_modules/@parcel/watcher/src/Watcher.cc
+/node_modules/@parcel/watcher/src/Watcher.hh
+/node_modules/@parcel/watcher/binding.gyp
+/node_modules/@parcel/watcher/index.d.ts
+/node_modules/@parcel/watcher/index.js
+/node_modules/@parcel/watcher/index.js.flow
+/node_modules/@parcel/watcher/LICENSE
+/node_modules/@parcel/watcher/package.json
+/node_modules/@parcel/watcher/README.md
+/node_modules/@parcel/watcher/wrapper.js
+/node_modules/@parcel/watcher-linux-arm64-glibc/LICENSE
+/node_modules/@parcel/watcher-linux-arm64-glibc/package.json
+/node_modules/@parcel/watcher-linux-arm64-glibc/README.md
+/node_modules/@parcel/watcher-linux-arm64-glibc/watcher.node
+/node_modules/@tailwindcss/cli/LICENSE
+/node_modules/@tailwindcss/cli/package.json
+/node_modules/@tailwindcss/cli/README.md
+/node_modules/@tailwindcss/node/LICENSE
+/node_modules/@tailwindcss/node/package.json
+/node_modules/@tailwindcss/node/README.md
+/node_modules/@tailwindcss/oxide/index.d.ts
+/node_modules/@tailwindcss/oxide/index.js
+/node_modules/@tailwindcss/oxide/LICENSE
+/node_modules/@tailwindcss/oxide/package.json
+/node_modules/@tailwindcss/oxide-linux-arm64-gnu/LICENSE
+/node_modules/@tailwindcss/oxide-linux-arm64-gnu/package.json
+/node_modules/@tailwindcss/oxide-linux-arm64-gnu/README.md
+/node_modules/@tailwindcss/oxide-linux-arm64-gnu/tailwindcss-oxide.linux-arm64-gnu.node
+/node_modules/braces/index.js
+/node_modules/braces/LICENSE
+/node_modules/braces/package.json
+/node_modules/braces/README.md
+/node_modules/detect-libc/bin/detect-libc.js
+/node_modules/detect-libc/.npmignore
+/node_modules/detect-libc/LICENSE
+/node_modules/detect-libc/package.json
+/node_modules/detect-libc/README.md
+/node_modules/enhanced-resolve/LICENSE
+/node_modules/enhanced-resolve/package.json
+/node_modules/enhanced-resolve/README.md
+/node_modules/enhanced-resolve/types.d.ts
+/node_modules/fill-range/index.js
+/node_modules/fill-range/LICENSE
+/node_modules/fill-range/package.json
+/node_modules/fill-range/README.md
+/node_modules/graceful-fs/clone.js
+/node_modules/graceful-fs/graceful-fs.js
+/node_modules/graceful-fs/legacy-streams.js
+/node_modules/graceful-fs/LICENSE
+/node_modules/graceful-fs/package.json
+/node_modules/graceful-fs/polyfills.js
+/node_modules/graceful-fs/README.md
+/node_modules/is-extglob/index.js
+/node_modules/is-extglob/LICENSE
+/node_modules/is-extglob/package.json
+/node_modules/is-extglob/README.md
+/node_modules/is-glob/index.js
+/node_modules/is-glob/LICENSE
+/node_modules/is-glob/package.json
+/node_modules/is-glob/README.md
+/node_modules/is-number/index.js
+/node_modules/is-number/LICENSE
+/node_modules/is-number/package.json
+/node_modules/is-number/README.md
+/node_modules/jiti/LICENSE
+/node_modules/jiti/package.json
+/node_modules/jiti/README.md
+/node_modules/lightningcss/node/ast.d.ts
+/node_modules/lightningcss/node/ast.js.flow
+/node_modules/lightningcss/node/browserslistToTargets.js
+/node_modules/lightningcss/node/composeVisitors.js
+/node_modules/lightningcss/node/flags.js
+/node_modules/lightningcss/node/index.d.ts
+/node_modules/lightningcss/node/index.js
+/node_modules/lightningcss/node/index.js.flow
+/node_modules/lightningcss/node/index.mjs
+/node_modules/lightningcss/node/targets.d.ts
+/node_modules/lightningcss/node/targets.js.flow
+/node_modules/lightningcss/node_modules/detect-libc/index.d.ts
+/node_modules/lightningcss/node_modules/detect-libc/LICENSE
+/node_modules/lightningcss/node_modules/detect-libc/package.json
+/node_modules/lightningcss/node_modules/detect-libc/README.md
+/node_modules/lightningcss/LICENSE
+/node_modules/lightningcss/package.json
+/node_modules/lightningcss/README.md
+/node_modules/lightningcss-linux-arm64-gnu/LICENSE
+/node_modules/lightningcss-linux-arm64-gnu/lightningcss.linux-arm64-gnu.node
+/node_modules/lightningcss-linux-arm64-gnu/package.json
+/node_modules/lightningcss-linux-arm64-gnu/README.md
+/node_modules/micromatch/index.js
+/node_modules/micromatch/LICENSE
+/node_modules/micromatch/package.json
+/node_modules/micromatch/README.md
+/node_modules/mri/index.d.ts
+/node_modules/mri/license.md
+/node_modules/mri/package.json
+/node_modules/mri/readme.md
+/node_modules/node-addon-api/tools/check-napi.js
+/node_modules/node-addon-api/tools/clang-format.js
+/node_modules/node-addon-api/tools/conversion.js
+/node_modules/node-addon-api/tools/eslint-format.js
+/node_modules/node-addon-api/tools/README.md
+/node_modules/node-addon-api/common.gypi
+/node_modules/node-addon-api/except.gypi
+/node_modules/node-addon-api/index.js
+/node_modules/node-addon-api/LICENSE.md
+/node_modules/node-addon-api/napi.h
+/node_modules/node-addon-api/napi-inl.deprecated.h
+/node_modules/node-addon-api/napi-inl.h
+/node_modules/node-addon-api/node_addon_api.gyp
+/node_modules/node-addon-api/node_api.gyp
+/node_modules/node-addon-api/noexcept.gypi
+/node_modules/node-addon-api/nothing.c
+/node_modules/node-addon-api/package.json
+/node_modules/node-addon-api/package-support.json
+/node_modules/node-addon-api/README.md
+/node_modules/picocolors/LICENSE
+/node_modules/picocolors/package.json
+/node_modules/picocolors/picocolors.browser.js
+/node_modules/picocolors/picocolors.d.ts
+/node_modules/picocolors/picocolors.js
+/node_modules/picocolors/README.md
+/node_modules/picocolors/types.d.ts
+/node_modules/picomatch/CHANGELOG.md
+/node_modules/picomatch/index.js
+/node_modules/picomatch/LICENSE
+/node_modules/picomatch/package.json
+/node_modules/picomatch/README.md
+/node_modules/tailwindcss/index.css
+/node_modules/tailwindcss/LICENSE
+/node_modules/tailwindcss/package.json
+/node_modules/tailwindcss/preflight.css
+/node_modules/tailwindcss/README.md
+/node_modules/tailwindcss/theme.css
+/node_modules/tailwindcss/utilities.css
+/node_modules/tapable/LICENSE
+/node_modules/tapable/package.json
+/node_modules/tapable/README.md
+/node_modules/tapable/tapable.d.ts
+/node_modules/to-regex-range/index.js
+/node_modules/to-regex-range/LICENSE
+/node_modules/to-regex-range/package.json
+/node_modules/to-regex-range/README.md
+/node_modules/.package-lock.json
