--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-widget-tweaks==1.5.0
 idna==3.10
 oauthlib==3.2.2
 psycopg==3.2.6
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 requests==2.32.3
