--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==44.0.2
 dj-database-url==2.3.0
 Django==5.1.7
 django-allauth==65.7.0
+django-anymail==13.0
 django-widget-tweaks==1.5.0
 idna==3.10
 oauthlib==3.2.2
