--- a/.env.docker
+++ b/.env.docker
@@ -1,3 +1,5 @@
+DEBUG = True
+SECRET_KEY =
 DATABASE_URL = postgresql://postgres:postgres@db:5432/djproject
 POSTGRES_DB = djproject
 POSTGRES_USER = postgres
